# kalkulator_macierzowy

./: .gitingnore  CMakeLists.txt  README.md  Sconstruct
include/: command.hpp  dataConverter.hpp  exceptions.hpp  inputAnalyzer.hpp  matrix.h  matrix.hpp  matrixVect.h  matrixVector.hpp  menu.hpp  options.hpp  printer.hpp  terminal_printer.hpp
src/: command.cpp  dataConverter.cpp  exceptions.cpp  inputAnalyzer.cpp  main.cpp  matrix.cpp  matrixVector.cpp  menu.cpp  options.cpp
